# ev-simulation-model

./: README.md  pyproject.toml  tox.ini
ev_simulation_model/data/: __init__.py  load.py
ev_simulation_model/io/: __init__.py  conditional_mvn_mixture_xml_exporter.py  exporter.py
ev_simulation_model/io/templates/: conditional_mvn_mixture.xml.jinja
ev_simulation_model/models/: __init__.py  conditional_mvn_mixture.py  multivariate_normal.py
notebooks/: exploration.ipynb  exploration_report.html  residential_ev.xml
tests/: conftest.py  test_version.py
tests/data/: test_load.py
tests/io/: test_conditional_mvn_mixture_xml_exporter.py
tests/models/: test_conditional_mvn_mixture.py  test_multivariate_normal.py
