[tool.poetry]
name = "ev-simulation-model"
version = "0.1.0"
description = "A time series generator to simulate charging data for different populations of electric vehicle users."
authors = ["Philipp Page <github@philipp-page.de>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
statsmodels = "^0.13.2"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
tox = "^3.24.4"
isort = "^5.10.1"
black = "^22.1.0"
flake8 = "^4.0.1"
mypy = "^0.931"
pytest-cov = "^3.0.0"
jupyterlab = "^3.3.1"
jupyterlab-code-formatter = "^1.4.10"
pandas-profiling = "^3.1.0"
ipywidgets = "^7.6.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
files = "ev_simulation_model"
ignore_missing_imports = true
plugins = "numpy.typing.mypy_plugin"
